--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
           integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -13,8 +13,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<i class="fa-sharp fa-solid fa-house"></i>
-<img src="images/logo.png" width="2%">
+    <div class="container" id="container">
+        <!-- Quote -->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+        </div>
+        <!-- Author -->
+        <div class="quote-author">
+            <span id="author">Buddha</span>
+        </div>
+        <!-- Buttons -->
+        <div class="button-container">
+            <button class="X" id="X" title="Tweet this!">
+                <i class="fab fa-x-twitter"></i>
+            </button>
+            <button id="new-quote">New Quote</button>
+        </div>
+
+    </div>
 <!-- Script -->
 <script src="script.js"></script>
 </body>
