--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container" id="container">
+    <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
@@ -32,6 +32,7 @@
         </div>
 
     </div>
+
 <!-- Script -->
 <script src="script.js"></script>
 </body>
