adding background animation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="cloud"></div>
     <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
@@ -33,7 +34,13 @@
 
     </div>
 
-<!-- Script -->
-<script src="script.js"></script>
+
+
+
+
+<!-- Script
+    <script src="script.js"></script>-->
+    <script type="module" src="script.mjs"></script>
+    <script src="quotes.js"></script>
 </body>
 </html>
