--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="cloud"></div>
+<!------------- Clouds ------------->
+<div class="clouds"></div>
     <div class="quote-container" id="quote-container">
-        <!-- Quote -->
+        <!------------- Quote ------------->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
             <span id="quote"></span>
         </div>
-        <!-- Author -->
+        <!------------- Author ------------->
         <div class="quote-author">
             <span id="author"></span>
         </div>
-        <!-- Buttons -->
+        <!-------------- Buttons ------------->
         <div class="button-container">
             <button class="X" id="X" title="Tweet this!">
                 <i class="fab fa-x-twitter"></i>
             </button>
             <button id="new-quote">New Quote</button>
         </div>
-
     </div>
+    <!------------- Loader ------------->
+    <div class="loader" id="loader"></div>
 
 
 
